update chess rules